<resources>
    <string name="app_name">Hamssa</string>
    <string name="facebook_app_id" translatable="false">1643125295948506</string>

    <string name="action_settings">Settings</string>
    <string name="news">News</string>

    <string name="year_ago">%1$d year ago</string>
    <string name="years_ago">%1$d years ago</string>
    <string name="month_ago">%1$d month ago</string>
    <string name="months_ago">%1$d months ago</string>
    <string name="day_ago">%1$d day ago</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="hour_ago">%1$d hour ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="a_moment_ago">A moment ago</string>
    <string name="minute_ago">%1$d minute ago</string>
    <string name="minutes_ago">%1$d minutes ago</string>

    <string name="connection_error">Connection error</string>
    <string name="empty_list">Empty list</string>

    <string name="send">Send</string>
    <string name="say_something">Say something</string>
    <string name="message_sent">Message sent</string>

    <string name="choose_your_unique_name">Choose your unique name \n(no numbers nor special characters)</string>

    <string name="unknown_error">An unknown error occurred</string>
    <string name="name_min_length">Your name must have 4 characters at least</string>
    <string name="name_max_length">Maximum name length of 16 characters</string>
    <string name="name_characters">Your name can only contain numbers, letters, and underscores</string>
    <string name="name_duplicated">This name already exists</string>

    <string name="please_wait">Please wait</string>
    <string name="connecting_with_server">Connecting with server&#8230;</string>
    <string name="vote_duplicated">You have already voted this comment</string>

    <string name="action_configuration">Settings</string>

    <string name="you_have_been_mentioned">You have been mentioned</string>
    <string name="you_have_been_mentioned_times">You have been mentioned %1$d times</string>
    <string name="you_received_likes">You have received %1$d votes</string>

    <string name="message_not_found">Message not found</string>

    <string name="most_commented_news">Most commented</string>
    <string name="last_news">Posts</string>
    <string name="action_messages">My messages</string>

    <string name="last_messages">Latest</string>
    <string name="most_voted_messages">Most voted</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="reply_a_message">Reply message</string>

    <string name="my_posts">My posts</string>
    <string name="title_activity_web" translatable="false">WebActivity</string>
    <string name="new_topic">New post</string>
    <string name="topic_description_hint">Short description</string>
    <string name="topic_content_hint">WHAT\'S ON YOUR MIND?</string>
    <string name="action_send">Send</string>
    <string name="email_address">e-mail address</string>

    <string name="password_sent_title">User linked</string>
    <string name="password_sent">Your user has been linked to this e-mail address and a password has been sent to you.</string>

    <string name="link_account">Set your email address</string>

    <string name="email_link_title">Account bind</string>
    <string name="email_link_info">You should bind your user to an email so that you could login from another device</string>

    <string name="login_quick">Quick</string>
    <string name="login_email">e-mail</string>
    <string name="login">Login</string>
    <string name="user_or_email">User name or e-mail</string>
    <string name="password">Password</string>
    <string name="user_not_found">User or email not found</string>
    <string name="wrong_password">Wrong password</string>
    <string name="add_an_image">Add an image</string>
    <string name="topic_detail">News detail</string>

    <string name="loading">Loading&#8230;</string>
    <string name="edit">Edit</string>
    <string name="delete">Remove</string>
    <string name="options_about_this_topic">Options about this item</string>

    <string name="editing">Editing</string>
    <string name="empty_description">Empty description</string>
    <string name="action_comments">Comments</string>
    <string name="action_expand">Expand</string>
    <string name="new_content">New content</string>
    <string name="notify_following">Notify following activity</string>
    <string name="notify_new_content">Notify on new content</string>
    <string name="notify_references">Notify when referenced</string>
    <string name="notify_votes">Notify when up-voted</string>
    <string name="logout">Logout</string>
    <string name="warning">Warning</string>
    <string name="logout_warning">Bind your account to an e-mail or you will not be able to log again</string>
    <string name="action_share">Share</string>
    <string name="others">Others</string>
    <string name="download">Download</string>
    <string name="promo_text">Talk about soccer, football, basket, F1, etc. with a minimalistic and quick app.</string>
    <string name="recover_password">Recover password</string>

    <string name="email_not_found">E-mail not found</string>
    <string name="error_sending_email">Error sending e-mail</string>
    <string name="email_not_valid">E-mail not valid</string>
    <string name="password_recovered">A new password has been sent to your e-mail</string>

    <string name="back">Back</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="account_login_banner">You can login with an email if you have previously logged and bound your account to this email</string>

    <string name="you_dont_have_permission">You don\'t have permission</string>
    <string name="you_are_not_the_owner_of_this_topic">You are not the owner of this topic</string>
    <string name="Change_the_language">Change the language</string>
    <string name="lan_arabic">Arabic</string>
    <string name="lan_English">English</string>
    <string name="lan_Spanish">Spanish</string>
    <string name="lan_French">French</string>
    <string name="the_languages">Languages</string>
    <string name="choose_languages">Choose language</string>
    <string name="text_ok">OK</string>
    <string name="what_is_on_your_mind">WHAT\'S ON YOUR MIND?</string>
    <string name="typeA">Type 1</string>
    <string name="typeB">Type 2</string>
    <string name="typeC">Type 3</string>
    <string name="empty_title">please write title</string>
    <string-array name="listOfLanguages">
        <item>@string/lan_English</item>
        <item>@string/lan_arabic</item>
        <item>@string/lan_Spanish</item>
        <item>@string/lan_French</item>
    </string-array>
    <string-array name="typeOfVoices">
        <item>@string/typeA</item>
        <item>@string/typeB</item>
        <item>@string/typeC</item>

    </string-array>


</resources>
