<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

        -->
    <item android:id="@+id/action_configuration"
        android:title="@string/action_configuration"
        android:icon="@drawable/ic_account"
        app:showAsAction="always" />

    <item android:id="@+id/action_messages"
        android:title="@string/action_messages"
        app:showAsAction="always"
        app:actionLayout="@layout/notification_message"
        />



    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom" />
</menu>
