<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.morocco.hamssa.ConfigurationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_scrollFlags="scroll|enterAlways"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:src="@drawable/profile_picture"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="#777777"/>

        <LinearLayout
            android:id="@+id/email_bind1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_email"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="16dp"
                android:layout_height="wrap_content"
                android:text="@string/link_account"/>

            <ImageButton
                android:id="@+id/email_help"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:scaleType="centerInside"
                android:padding="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_info"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_bind2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/main"
                android:hint="@string/email_address"
                />
            <Button
                android:id="@+id/send_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/send"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="#777777"/>
        <LinearLayout
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/Change_the_language"/>

            <Spinner
                android:id="@+id/spinner_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/listOfLanguages"
                >
            </Spinner>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="#777777"/>

        <LinearLayout
            android:id="@+id/notify_following"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/notify_new_content"/>

            <CheckBox
                android:id="@+id/notify_following_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notify_references"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/notify_references"/>

            <CheckBox
                android:id="@+id/notify_references_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notify_votes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/notify_votes"/>

            <CheckBox
                android:id="@+id/notify_votes_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="#777777"/>

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="16dp"
                android:layout_height="wrap_content"
                android:text="@string/logout"/>

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:scaleType="centerInside"
                android:padding="8dp"
                android:src="@drawable/ic_logout"/>

        </LinearLayout>


    </LinearLayout>
    </ScrollView>

</LinearLayout>
